created functions for renderingSearchItinerary and renderSearchResults

--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Nashvegas Itinerary</title>
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
   </head>
 
   <body>
@@ -33,14 +33,14 @@
       </div>
     </article>
 
+    <section id="search-results-container"></section>
+
     <div id="itinerary-container">
       <h3 id="results-title">Your Itinerary:</h3>
       <section id="itinerary-locaysh"></section>
     </div>
-    <!-- <scripts src=""></scripts>
-    <scripts src=""></scripts>
-    <scripts src=""></scripts>
-    <scripts src=""></scripts>
-    <scripts src=""></scripts> -->
+    <script src="src/scripts/keys.js"></script>
+    <script src="src/scripts/functions.js"></script>
+    <script src="src/scripts/restaurants.js"></script>
   </body>
 </html>
