wired up concerts.js

--- a/index2.html
+++ b/index2.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Nashvegas Itinerary</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <h1 class="mainH1">Find your activities</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Nashvegas Itinerary</title>
+  <!-- <link rel="stylesheet" href="style.css" /> -->
+</head>
 
-    <article class="searchBoxes-container">
-      <div id="parks-container">
-        <button id="parks-button" class="searchButtons">Search</button>
-        <input type="text" id="parks-search-input" class="searchBoxes" />
-      </div>
+<body>
+  <h1 class="mainH1">Find your activities</h1>
 
-      <div id="restaurants-container">
-        <button id="restaurants-button" class="searchButtons">Search</button>
-        <input type="text" id="restaurants-search-input" class="searchBoxes" />
-      </div>
-
-      <div id="meetups-container">
-        <button id="meetups-button" class="searchButtons">Search</button>
-        <input type="text" id="meetups-search-input" class="searchBoxes" />
-      </div>
-
-      <div id="concerts-container">
-        <button id="concerts-button" class="searchButtons">Search</button>
-        <input type="text" id="concerts-search-input" class="searchBoxes" />
-      </div>
-    </article>
-
-    <div id="itinerary-container">
-      <h3 id="results-title">Your Itinerary:</h3>
-      <section id="itinerary-locaysh"></section>
+  <article class="searchBoxes-container">
+    <div id="parks-container">
+      <button id="parks-button" class="searchButtons">Search</button>
+      <input type="text" id="parks-search-input" class="searchBoxes" />
     </div>
-    <!-- <scripts src=""></scripts>
-    <scripts src=""></scripts>
-    <scripts src=""></scripts>
-    <scripts src=""></scripts>
-    <scripts src=""></scripts> -->
-  </body>
+
+    <div id="restaurants-container">
+      <button id="restaurants-button" class="searchButtons">Search</button>
+      <input type="text" id="restaurants-search-input" class="searchBoxes" />
+    </div>
+
+    <div id="meetups-container">
+      <button id="meetups-button" class="searchButtons">Search</button>
+      <input type="text" id="meetups-search-input" class="searchBoxes" />
+    </div>
+
+    <div id="concerts-container">
+      <button id="concerts-button" class="searchButtons">Search</button>
+      <input type="text" id="concerts-search-input" class="searchBoxes" />
+    </div>
+  </article>
+
+  <div id="itinerary-container">
+    <h3 id="results-title">Your Itinerary:</h3>
+    <section id="itinerary-locaysh"></section>
+  </div>
+
+
+
+  <script src="src/scripts/concerts.js"></script>
+</body>
+
 </html>
