commiting to checkout cs branch

--- a/index2.html
+++ b/index2.html
@@ -34,13 +34,17 @@
     </div>
   </article>
 
+  <section id="search-results-container"></section>
+
   <div id="itinerary-container">
     <h3 id="results-title">Your Itinerary:</h3>
     <section id="itinerary-locaysh"></section>
   </div>
 
 
-
+  <script src="src/scripts/keys.js"></script>
+  <script src="src/scripts/functions.js"></script>
+  <script src="src/scripts/restaurants.js"></script>
   <script src="src/scripts/concerts.js"></script>
 </body>
 
