resolved gitignore branch

--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
       <h3 id="results-title">Your Itinerary:</h3>
       <section id="itinerary-locaysh"></section>
     </div>
-    <script src="src/scripts/keys.js"></script>
+    <script src="src/scripts/apiKeys.js"></script>
     <script src="src/scripts/functions.js"></script>
     <script src="src/scripts/restaurants.js"></script>
   </body>
