--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@
   </div>
 
 
-  <script src="src/scripts/keys.js"></script>
+  <script src="src/scripts/apiKeys.js"></script>
   <script src="src/scripts/functions.js"></script>
   <script src="src/scripts/restaurants.js"></script>
   <script src="src/scripts/concerts.js"></script>
