put in placeholders and an aside in index2.html

--- a/index2.html
+++ b/index2.html
@@ -17,22 +17,22 @@
     <article class="searchBoxes-container">
       <div id="parks-container">
         <button id="parks-button" class="searchButtons">Search</button>
-        <input type="text" id="parks-search-input" class="searchBoxes" />
+        <input type="text" id="parks-search-input" class="searchBoxes" placeholder="parks by feature" />
       </div>
 
       <div id="restaurants-container">
         <button id="restaurants-button" class="searchButtons">Search</button>
-        <input type="text" id="restaurants-search-input" class="searchBoxes" />
+        <input type="text" id="restaurants-search-input" class="searchBoxes" placeholder="restaurants by food type" />
       </div>
 
       <div id="meetups-container">
         <button id="meetups-button" class="searchButtons">Search</button>
-        <input type="text" id="meetups-search-input" class="searchBoxes" />
+        <input type="text" id="meetups-search-input" class="searchBoxes" placeholder="meet-ups by topic" />
       </div>
 
       <div id="concerts-container">
         <button id="concerts-button" class="searchButtons">Search</button>
-        <input type="text" id="concerts-search-input" class="searchBoxes" />
+        <input type="text" id="concerts-search-input" class="searchBoxes" placeholder="concerts by genre" />
       </div>
     </article>
     <section id="search-results-container"></section>
@@ -42,6 +42,7 @@
     <div id="itinerary-container">
       <h3 id="results-title">Your Itinerary:</h3>
       <section id="itinerary-locaysh"></section>
+    </div>
   </aside>
 
   <script src="src/scripts/functions.js"></script>
