add script tag to index2 for concerts.js

--- a/index2.html
+++ b/index2.html
@@ -48,6 +48,7 @@
   <script src="src/scripts/functions.js"></script>
   <script src="src/scripts/e-fetch.js"></script>
   <script src="src/scripts/restaurants.js"></script>
+  <script src="src/scripts/concerts.js"></script>
   <script src="src/scripts/apiKeys.js"></script>
 </body>
 
