Parks fetch and functions added, scripts added, fetch file not neede; deleted, check if it is good

--- a/index2.html
+++ b/index2.html
@@ -50,6 +50,7 @@
   <script src="src/scripts/restaurants.js"></script>
   <script src="src/scripts/concerts.js"></script>
   <script src="src/scripts/apiKeys.js"></script>
+  <script src="src/scripts/parks.js"></script>
 </body>
 
 </html>
