fixing minor text content of results

--- a/index2.html
+++ b/index2.html
@@ -60,7 +60,7 @@
       <div id="itinerary-container">
         <h2 id="results-title">Your Itinerary:</h2>
         <div id="parks">
-          <h3>Parks</h3>
+          <h3>Parks:</h3>
         </div>
         <div id="restaurants">
           <h3>Restaurants:</h3>
