fixed some scripts yall

--- a/index2.html
+++ b/index2.html
@@ -60,17 +60,18 @@
       <div id="itinerary-container">
         <h2 id="results-title">Your Itinerary:</h2>
         <div id="parks">
-          <h3>Parks:</h3>
+          <h3>Park:</h3>
         </div>
         <div id="restaurants">
-          <h3>Restaurants:</h3>
+          <h3>Restaurant:</h3>
         </div>
         <div id="meetups">
-          <h3>Meetups:</h3>
+          <h3>Meetup:</h3>
         </div>
         <div id="concerts">
-          <h3>Concerts:</h3>
+          <h3>Concert:</h3>
         </div>
+        <button id="save-itinerary-btn">Save Itinerary</button>
       </div>
     </aside>
 
